# katsel

./: .gitignore  .hlint.yaml  CMakeLists.txt  LICENSE  README.md  brace.cabal  katsel.cabal  lexingtest.oxian  package.yaml  stack.yaml  test.oxian  test.trbel
docs/: CMakeLists.txt  Doxyfile
include/: README.md  annotations.h  ast.h  astnode.h  blankvisitor.h  compiler.h  errors.h  file.h  lexer.h  llvmgenvisitor.h  parser.h  printvisitor.h  token.h  tokentype.h  visitor.h
include/ast/: ast.h  astfwd.h  dotvisitor.h  printvisitor.h  visitor.h
include/codegen/: codegen.h  context.h  globalsassembler.h
include/ir/: block.h  cfgdotter.h  function.h  instruction.h  instructionfwd.h  ir_builder.h  module.h  param.h  printer.h  register.h  type.h  unit.h  value.h  visitor.h
include/ir/value/: value.h
include/lex/: lexer.h  token.h  tokens.h  tokentype.h
include/lower/: lowerer.h  visitor.h
include/mangle/: mangler.h
include/message/: ansistuff.h  errmsgs.h  error.h  errors.h  fmtmessage.h  internal.h  messagetype.h  reportAbort.h  report_abort.h  sections.h
include/parse/: annotations.h  ast.h  parser.h
include/replicate/: replicatevisitor.h
include/typing/: type.h
include/utils/: assert.h  file.h  format.h  location.h  maybe.h  ptr.h  result.h
include/value/: value.h
include/visit/: dotvisitor.h  printvisitor.h  visitor.h
reference/: README.md  grammar  tokens
src/: AST.hs  CBackend.hs  CMakeLists.txt  Colors.hs  Driver.hs  ErrorAcc.hs  File.hs  IR.hs  Interner.hs  Lex.hs  Location.hs  LowerAST.hs  Main.hs  Mangle.hs  MaybeWithError.hs  Message.hs  MonadUtils.hs  Parse.hs  Pool.hs  README.md  SimpleLens.hs  Tokens.hs  ansistuff.cpp  ast.cpp  astnode.cpp  blankvisitor.cpp  compiler.cpp  errors.cpp  lexer.cpp  llvmgenvisitor.cpp  main.cpp  parsedecl.cpp  parser.cpp  printvisitor.cpp  visitor.cpp
src/AST/: Datatypes.hs  Parsing.hs
src/IR/: ChildList.hs  ConstFunctionPointer.hs  ConstFunctionPointer.hs-boot  DeclSpan.hs  DeclSymbol.hs  Describe.hs  Dot.hs  Function.hs  Function.hs-boot  FunctionPointer.hs  FunctionPointer.hs-boot  ID.hs  IRCtx.hs  IRCtx.hs-boot  MapSynonyms.hs  Module.hs  Module.hs-boot  Parent.hs  Print.hs  PrintClasses.hs  PrintFunctions.hs  ROWO.hs  RecFindEntities.hs  TyCtx.hs  TyIdx.hs  TyIdx.hs-boot  Type.hs  Type.hs-boot  TypeInterner.hs  Typed.hs  Value.hs
src/IR/TypeStuffAndIRCtx/: Stuff.hs  Stuff.hs-boot
src/Mangle/: Tag.hs  TagName.hs
src/Message/: Arrows.hs  PrettyPrint.hs  PrettyPrintTH.hs  Underlines.hs  Utils.hs
src/ast/: CMakeLists.txt  ast.cpp  dotvisitor.cpp  printvisitor.cpp
src/codegen/: CMakeLists.txt  argsandparams.cpp  codegen.cpp  codegenlocal.h  context.cpp  decl.cpp  declarator.cpp  expr.cpp  forwdecl.cpp  function.cpp  globalsassembler.cpp  impl.cpp  locals.cpp  params.cpp  pathvisitor.cpp  program.cpp  stmt.cpp  type.cpp  typeresolve.cpp  typevisitor.cpp  vstmt.cpp
src/codegen/decl/: CMakeLists.txt  codegendecl.cpp  function.cpp  impl.cpp
src/codegen/expr/: CMakeLists.txt  codegenexpr.cpp
src/codegen/program/: CMakeLists.txt  codegenprogram.cpp
src/codegen/stmt/: CMakeLists.txt  codegenstmt.cpp
src/codegen/type/: CMakeLists.txt  codegentype.cpp
src/compiler/: CMakeLists.txt  main.cpp
src/ir/: CMakeLists.txt  block.cpp  branches.cpp  builtin.cpp  builtintype.cpp  cfgdotter.cpp  constvalues.cpp  function.cpp  generictype.cpp  instruction.cpp  intsruction.cpp  module.cpp  pointer.cpp  printer.cpp  register.cpp  type.cpp  unit.cpp  value.cpp
src/ir/typing/: CMakeLists.txt  function.cpp  void.cpp
src/ir/value/: CMakeLists.txt  value.cpp
src/lex/: CMakeLists.txt  lexer.cpp  token.cpp
src/lower/: CMakeLists.txt  branch.cpp  declsymbol.cpp  function.cpp  instr.cpp  lowerbr.cpp  lowerer.cpp  lowererlocal.h  lowerinstr.cpp  valuedef.cpp  valueref.cpp
src/mangle/: CMakeLists.txt  mangler.cpp
src/message/: CMakeLists.txt  ansistuff.cpp  errmsgs.cpp  errorreport.cpp  errors.cpp  errors.h  json.h  messagetype.cpp  sections.cpp  sections.h  utils.h
src/message/sections/: CMakeLists.txt  note.cpp  underlines.cpp
src/parse/: CMakeLists.txt  ast.cpp  decl.cpp  error.cpp  parsedecl.cpp  parseexpr.cpp  parser.cpp  parserlocal.h  parserloop.cpp  parsestack.h  parsestmt.cpp  parseutils.cpp  stmt.cpp
src/replicate/: CMakeLists.txt  replicatevisitor.cpp
src/typing/: CMakeLists.txt  builtin.cpp  function.cpp  type.cpp  void.cpp
src/utils/: CMakeLists.txt  format.cpp  location.cpp
src/visit/: CMakeLists.txt  dotvisitor.cpp  printvisitor.cpp  visitor.cpp
test/: CMakeLists.txt  README.md  Test.hs  lexertest.cpp  test.hs  testall.py  testlex1.oxian  unexpectedcharacter.ksl
test/cast/: integral.ksl  invalid.ksl  signedness.ksl
test/char/: char.ksl  unterminated.ksl
test/expressions/: assignmentdifferenttypes.ksl  assignmentinvalid.ksl  associativity.ksl  basicoperations.ksl  binaryopconflicttys.ksl  block.ksl  callnoncall.ksl  comparison.ksl  lhsunsupported.ksl  precedence.ksl  ternary.ksl  ternaryconflictingtypes.ksl  unaryunsupported.ksl
test/functions/: duplicateparam.ksl  invalidreturn.ksl  noforwdecl.ksl  redeclaration.ksl  return.ksl  wrongarg.ksl  wrongnumargs.ksl
test/indent/: unexpected.ksl
test/int/: invalidbase.ksl
test/lex/: charlit.ksl  charlit.oxian  idenkw.ksl  idenkw.oxian  kwall.ksl  kwall.oxian  numlit.ksl  numlit.oxian  s.ksl  s.oxian  s_d.ksl  s_d.oxian  s_se.ksl  s_se.oxian  s_se_d.ksl  s_se_d.oxian  s_se_d_de.ksl  s_se_d_de.oxian  singlechar.oxian  strlit.ksl  strlit.oxian
test/numbers/: bases.ksl  basic.ksl  bool.ksl  invalidbase.ksl  invalidcharforbase.ksl  invalidcharforfloat.ksl  nodigits.ksl
test/scoping/: blocks.ksl
test/stmt/: block.ksl  empty.ksl  expr.ksl
test/string/: unterminated.ksl
test/typing/: function.ksl  void.ksl
test/variables/: multipledeclaration.ksl  redeclaration.ksl  undecl.ksl
utils/: README.md  astgen.py  errgen.py  errors.yml  genall.py  grammar  helpers.py  instrgen.py  kwgen.py  parsegen.py  visitorgen.py  visitorincludegen.py
