cabal-version:       2.0

name:                brace
version:             0.0.0
license:             MIT
license-file:        LICENSE
author:              Jason Nguyen
maintainer:          lsotnnirhcdfkb@gmail.com
build-type:          Simple

executable brace
  hs-source-dirs:      src
  other-modules:       Driver

                       -- lexing the source into tokens
                     , Tokens

                       -- parsing the token stream into an ast
                     , AST

                       -- lowering the ast into ir
                     , IR
                     , IR.ConstFunctionPointer
                     , IR.DeclSpan
                     , IR.DeclSymbol
                     , IR.Describe
                     , IR.Dot
                     , IR.Function
                     , IR.ID
                     , IR.IRCtx
                     , IR.MapSynonyms
                     , IR.Module
                     , IR.Parent
                     , IR.Print
                     , IR.RecFindEntities
                     , IR.Type
                     , IR.TypeStuffAndIRCtx.Stuff
                     , IR.Typed
                     , IR.Value

                     -- c backend
                     , CBackend

                     -- mangling names
                     , Mangle
                     , Mangle.Tag
                     , Mangle.TagName

                       -- utility things
                     , Location
                     , File
                     , Interner

                       -- message things (diagnostics)
                     , Message
                     , Message.Underlines
                     , Message.Utils
                     , Message.PrettyPrint
                     , Message.PrettyPrintTH

                     -- ANSI colors
                     , Colors


  main-is:             Main.hs
  build-depends:       base ^>=4.14.1.0
                     , ansi-terminal >= 0.10
                     , mtl >= 2.2.2 && < 3
                     , containers >= 0.6.2.1
                     , template-haskell >= 2.16.0.0

  default-extensions:  LambdaCase
  default-language:    Haskell2010

  ghc-options: -Wall
