name:                katsel
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lsotnnirhcdfkb/katsel#readme
license:             MIT
license-file:        LICENSE
author:              Jason Nguyen
maintainer:          lsotnnirhcdfkb@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable katsel
  hs-source-dirs:      src
  other-modules:       Driver
                     , File
                     , Lex
                     , Location
                     , Message

  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
